--- a/app/src/main/res/layout/dialog_agent_customer_funds_transfer.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_funds_transfer.xml
@@ -58,7 +58,8 @@
                 android:orientation="vertical"
                 android:layout_weight="1"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="match_parent"
